# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2019-01-23 Giuseppe Aruta.
    Added calculus of number of classes on DEM statistics plugin

2019-01-22 Giuseppe Aruta. 
    OpenKLEM Plugin: Corrected a list of bug and made some implementations:
    1) Reduced hydro table to 2500 cells for OpenKLEM output tab (speedup time)
    2) added monitoring to mostly all processes
    3) workaround to avoid 'gost' list of raster layers (partially solved)
    4) workaround to solve border false values on the borders for aspect and 
       slope rasters
    5) added file type to exported raster plugin

<-- Changes.txt updated until here -->

2018-12-31 ede, Giuseppe Aruta.
   * Updated ColorChooser to version 1.3. 
     Speed up loading time from 1.31s to 0.1s

2018-12-28 Giuseppe Aruta.
   * Updated ColorChooser to version 1.2.1
     Correct some bugs on loading plugin

2018-12-27 ede
  * make sure workbench pane background is blue over on all implementations,
    before the bg color was determined by the UI used (blue on windows, 
    black or grey on osx and linux)
  * PLUS: add jaxb xml libs, which were removed from jdk9+, currently only
    needed by ViewManager extension, document extension and needed deps in
    readme.txt
  * speedup some plugin's init by delaying gui and preventing double init
      org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISPlugIn
        took 0.43s now 0.01s
      org.openjump.core.ui.plugin.file.OpenFilePlugIn took 0.62s now 0.03s
      org.openjump.core.ui.plugin.file.OpenProjectPlugIn took 0.46s now 0.01s
      com.vividsolutions.jump.workbench.ui.zoom.InstallZoomBarPlugIn
        took 1.22s now 0.02s
    as a side note, testing shows that OJ startup gets faster with newer java