@@ -3,11 +3,15 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2019-02-10 ede
+  * bugfix #485 "Cannot import kml", removed currently obsolete conversion to 
+    FlexibleFeatureSchema
+
 2019-01-23 Giuseppe Aruta.
     Added calculus of number of classes on DEM statistics plugin
 
 2019-01-22 Giuseppe Aruta. 
-    OpenKLEM Plugin: Corrected a list of bug and made some implementations:
+  * OpenKLEM Plugin: Corrected a list of bug and made some implementations:
     1) Reduced hydro table to 2500 cells for OpenKLEM output tab (speedup time)
     2) added monitoring to mostly all processes
     3) workaround to avoid 'gost' list of raster layers (partially solved)
@@ -15,11 +19,14 @@
        slope rasters
     5) added file type to exported raster plugin
 
+2019-01-17 ede
+  * bugfix "NPE with adding data into the second project with OJ" 
+
 <-- Changes.txt updated until here -->
 
 2018-12-31 ede, Giuseppe Aruta.
-   * Updated ColorChooser to version 1.3. 
-     Speed up loading time from 1.31s to 0.1s
+  * Updated ColorChooser to version 1.3. 
+    Speed up loading time from 1.31s to 0.1s
 
 2018-12-28 Giuseppe Aruta.
    * Updated ColorChooser to version 1.2.1
